# npc-structural-review-agent

./: .env.example  .gitignore  README.md  _adk_entrypoints.txt  agent.py  pyproject.toml
base_agent/: __init__.py  agent.py  config.py  prompts.py
base_agent/logic/: checklist_loader.py  pdf_extractor.py  report_generator.py  scoring.py
base_agent/tools/: structural_review_tool.py
config/: applicability.json  checklist_entity.json  checklist_sectoral.json  checklist_thematic.json  questions.json
deployment/: deploy.py
